added commnads to puch changes to github

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exploring github</title>
+    <title>Exploring github repo</title>
 </head>
 <body>
-    <h1>Exploring github</h1>
+    <h3>For every other time</h3>
+    <p>git add .</p>
+    <p>git commit -m "your meaningful commit message"</p>
+    <p>git push</p>
+
 </body>
 </html> 
